Fixed different image size in card view, view button not available on My courses page and sections not visible for some courses issues.

--- a/src/main/webapp/app/entities/user-pages/user-courses/user-courses.component.scss
+++ b/src/main/webapp/app/entities/user-pages/user-courses/user-courses.component.scss
@@ -54,3 +54,12 @@
 .card button i {
   content: '\f06e';
 }
+
+.card-img-top {
+  width: 320px;
+  height: 149px;
+}
+
+.mat-card-title {
+  font-size: medium;
+}
